--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,8 +5,7 @@
 <div th:fragment="copy">
     <div class="panel panel-default">
         <div class="panel-body">
-            &copy; 2016 Codecool Budapest      --  by petit cookie
-            <img src="/img/petit_cookie_cookie.png"/>
+            &copy; 2017 Peak Budapest      --  by kb
         </div>
     </div>
 </div>
